# rust-gd

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/: dependabot.yml
.github/workflows/: bench-libecc.yml  shiftleft-analysis.yml  test-libecc.yml  test.yml
examples/: main.rs
src/: dict.rs  gd_bit_unit.rs  gd_byte_unit.rs  lib.rs  main.rs  separator.rs
src/lib_hamming/: Cargo.toml
src/lib_hamming/src/: constant.rs  lib.rs  util.rs
src/libecc/: Cargo.toml
src/libecc/benches/: bench_hamming.rs  bench_rs.rs
src/libecc/src/: constant.rs  lib.rs  types.rs  util.rs
src/libecc/src/hamming/: constant.rs  mod.rs  util.rs
src/libecc/src/math/: field.rs  matrix.rs  mod.rs  vectorized.rs
src/libecc/src/rs/: field.rs  matrix.rs  mod.rs  vectorized.rs
src/libecc/tests/: test_hamming_async.rs  test_rs_async.rs
