[package]
name = "rust-gd"
version = "0.2.3"
edition = "2021"
description = "Generalized Deduplication based on Error-Correcting Codes"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-gd"
repository = "https://github.com/junkurihara/rust-gd"
license = "MIT"
readme = "README.md"
categories = ["compression", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bitvec = "1.0.1"
futures = "0.3.30"
hashlink = "0.9.0"
libecc = { path = "src/libecc", version = "0.2.2" }
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
rand = "0.8.5"


[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
