[package]
name = "libecc"
version = "0.1.0"
edition = "2021"
description = "Library of Error-Correcting Codes for GD"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-gd"
repository = "https://github.com/junkurihara/rust-gd"
license = "MIT"

[dependencies]
anyhow = "1.0.53"
bitvec = "1.0.0"
phf = { version = "0.10.1", features = ["macros"] }

[dev-dependencies]
futures = "0.3.21"
rand = "0.8.5"
tokio = { version = "1.17.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-stream = "0.1.8"


[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
